--- a/styles/produtos.css
+++ b/styles/produtos.css
@@ -35,6 +35,7 @@
   transition: opacity 0.3 ease, transform 0.3s ease;
   box-sizing: border-box;
   cursor: pointer;
+  position: relative;
 }
 
 .produtos__cartao--exclusivos {
@@ -51,7 +52,14 @@
   width: 100%;
   height: auto;
 }
-    
+
+.produtos__cartao__img-hovered {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  opacity: 0;
+}
+
 .produtos__cartao .info {
   display: flex;
   flex-direction: column;
@@ -59,6 +67,8 @@
   height: 100%;
   padding: 1rem;
   text-align: center;
+  transition: opacity 0.3s ease;
+  transition-delay: 0;
 }
     
 .produtos__cartao h3 {
@@ -241,7 +251,18 @@
   }
       
   .produtos__cartao:hover {
-    transform: scale(1.03);
+    transform: scale(1.015);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  }
+
+  .produtos__cartao--exclusivos:hover {
+    transform: none;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+  }
+
+  .produtos__cartao:hover:hover .produtos__cartao__img-hovered {
+    opacity: 1;
+    transition: opacity 0.3s ease;
   }
 
 
